# ros_workshop

./: .gitignore  .gitmodules  README.md  SIN_VM.md
.github/workflows/: ros_melodic.yml
cpp_pubsub/: CMakeLists.txt  package.xml
cpp_pubsub/src/: talker.cpp
cpp_pubsub/test/: test_example.cpp
docker/: Dockerfile  build.sh  install.sh  requirements.txt  requirements_ros.txt  run.sh
examples/cpp_pubsub/src/: listener.cpp
examples/py_pubsub/: package.xml
examples/py_pubsub/test/: talker_listener_test.py
noah_bot_launcher/: CMakeLists.txt  README.md  package.xml
py_pubsub/: CMakeLists.txt
py_pubsub/test/: test-talker-listener.launch
session_2/control_robot/include/control_robot/: proportional_controller.h
session_2/control_robot/src/: proportional_controller.cpp
session_2/mi_primer_paquete/src/: listener.cpp
session_2/move_robot/: CMakeLists.txt
session_2/move_robot/src/: move_robot_listener.cpp  move_robot_square.cpp
session_2/src/control_robot/: CMakeLists.txt  package.xml
session_2/src/control_robot/src/: control_robot.cpp  proportional_controller.cpp
session_2/src/mi_primer_paquete/: CMakeLists.txt  package.xml
session_2/src/mi_primer_paquete/src/: talker.cpp
session_2/src/move_robot/: package.xml
session_2/src/move_robot/src/: move_robot.cpp  move_robot_listener.cpp  move_robot_square.cpp
session_3/: Readme.md
session_3/launch/: view_robot.launch
session_3/src/: CMakeLists.txt  package.xml
session_3/src/src/: tf_broadcaster.cpp
session_3/src/urdf/: robot_arm.urdf
session_3/urdf/: robot_mobile.urdf
session_4/noah_map_navigation/: CMakeLists.txt  README.md
session_4/noah_map_navigation/config/: costmap_common_params.yaml  move_base_params.yaml
session_4/noah_map_navigation/launch/: move_base_map_navigation.launch  rviz.launch
session_4/noah_navigation/: package.xml
session_4/noah_navigation/config/: local_costmap_params.yaml  rviz.rviz
session_4/noah_navigation/launch/: move_base.launch
session_4/src/noah_bot_launcher/launch/: noah_navigationless.launch
session_4/src/noah_map_navigation/: package.xml
session_4/src/noah_map_navigation/config/: base_local_planner_params.yaml  rviz.rviz
session_4/src/noah_map_navigation/maps/: small_house.pgm  small_house.yaml
session_4/src/noah_navigation/: CMakeLists.txt  README.md
session_4/src/noah_navigation/config/: global_costmap_params.yaml
session_4/src/noah_navigation/launch/: rviz.launch
