<?xml version="1.0"?>
<package format="2">
  <name>noah_bot_launcher</name>
  <version>0.1.0</version>
  <description>Helper package to launch Noha bot</description>
  <maintainer email="repos@ekumenlabs.com">Ekumen Repository Management</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
