<?xml version="1.0"?>
<package format="2">
  <name>py_pubsub</name>
  <version>0.1.0</version>
  <description>Example Python ROS package</description>
  <maintainer email="repos@ekumenlabs.com">Ekumen Repository Management</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rostest</build_depend>
  <depend>std_msgs</depend>
  <exec_depend>rospy</exec_depend>
</package>
