<?xml version="1.0"?>
<package format="2">
  <name>noah_navigation</name>
  <version>0.0.1</version>
  <description>The noah_navigation package</description>

  <author email="franco.c@ekumenlabs.com">Franco Cipollone</author>
  <maintainer email="franco.c@ekumenlabs.com">Franco Cipollone</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>move_base</depend>

  <export>

  </export>

</package>
