<?xml version="1.0"?>
<package format="2">
  <name>move_robot</name>
  <version>1.0.0</version>
  <description>Este paquete permite mover un robot utilizando ROS</description>

  <maintainer email="jane.doe@example.com">Jane Doe</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
</package>
