<?xml version="1.0"?>
<package format="2">
  <name>noah_map_navigation</name>
  <version>0.0.1</version>
  <description>The noah_map_navigation package</description>

  <author email="franco.c@ekumenlabs.com">Franco Cipollone</author>
  <maintainer email="franco.c@ekumenlabs.com">Franco Cipollone</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <depend>amcl</depend>
  <depend>map_server</depend>
  <depend>move_base</depend>
  <depend>move_base_utils</depend>

  <export>

  </export>

</package>
